# namebo

./: .gitignore  .pylintrc  Makefile  README  README.md  build.py  namebo.cc  run_tests.sh
cc/: Makefile  build.py
cc/src/: convert.cc  count.cc  count_words.cc  dump.cc  generate.cc  generate_words.cc  namebo.proto  parse_timeline.py  segmenter.cc  segmenter.h  segmenter_test.cc  string_view.cc  string_view.h  word_counter.cc  word_counter.h  word_counter_test.cc
firebase/: .firebaserc
firebase/functions/: package-lock.json
firebase/functions/src/: generate.ts  index.ts  map.ts
firebase/public/: index.html
namebo/: Cargo.toml
namebo/src/: lib.rs
parse/cloud/: generate.js  main.js  map.js
parse/public/: index.html
src/: convert.cc  count.cc  count_words.cc  dump.cc  generate.cc  generate_words.cc  namebo.cc  namebo.proto  parse_timeline.py  segmenter.cc  segmenter.h  segmenter_test.cc  string_view.cc  string_view.h  word_counter.cc  word_counter.h  word_counter_test.cc
web/: generate.ts  index.ts  map.ts  package-lock.json  package.json
web/public/: index.html
